# wohoo

./: db.sqlite3  manage.py  pyproject.toml
mainapp/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
mainapp/migrations/: 0001_initial.py  0002_notification.py  0003_customuser_last_active.py  0004_group_join_policy_joinrequest.py
mainapp/templates/mainapp/: dm_page.html  group_page.html  home.html  index.html  login.html  manage_join_requests.html  signup.html
wohoo/: asgi.py  settings.py  urls.py  wsgi.py
